--- a/index.html
+++ b/index.html
@@ -1,25 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="description" content="">
-		<meta name="author" content="cottaan">
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-		<title>Google Earth Engine Validation Results</title>
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-		<link rel="stylesheet" href="http://js.arcgis.com/3.10/js/esri/css/esri.css">
-		<link rel="stylesheet" href="styles/slate.css"> <!--for the dgrid-->
 		<link rel="stylesheet" href="http://js.arcgis.com/3.10/js/dojo/dijit/themes/tundra/tundra.css">
+		<link rel="stylesheet" href="http://js.arcgis.com/3.10/js/esri/css/esri.css">
+		<link rel="stylesheet" href="styles/slate.css">
 		<link rel="stylesheet" href="styles/geeResults.css">
 		<script src="http://js.arcgis.com/3.10/"></script>
 		<script src="scripts/geeResults.js"></script>
 	</head>
-
 	<body class="tundra">
-		<div id="appLayout">
-
+		<div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design:'headline'" id="borderContainer">
+			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'top'" id="topCP">
+				Google Earth Engine Results Analyser
+			</div>
+			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'left'" id="leftCP"></div>
+			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'" id="centerCP">
+				<div id='mapCanvas'>
+					<div id='mapDiv'>
+						<div id='BasemapToggle'></div><div id='slider'></div>
+					</div>
+				</div>
+			</div>
+			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right',splitter:true" id="rightCP">
+				<div>
+					Applied masks
+				</div>
+				<select id="appliedMasks" data-dojo-type="dijit/form/Select">
+					<option value="1" selected="selected">None</option>
+					<option value="2">Slope</option>
+					<option value="3">Slope, NDVI</option>
+					<option value="4">Slope, NDVI, Temperature</option>
+					<option value="5">Slope, NDVI, Temperature, Bare Roc</option>
+				</select>
+				<div>
+					Actual class
+				</div>
+				<select id="actualClass" data-dojo-type="dijit/form/Select">
+					<option value="-1" selected="selected">All</option>
+					<option value="0">Not water</option>
+					<option value="1">No data</option>
+					<option value="2">Cloud</option>
+					<option value="3">Water</option>
+					<option value="5">Ice/Snow</option>
+					<option value="6">Shadow</option>
+					<option value="8">Bare Rock</option>
+					<option value="9">Flooded Vegetation</option>
+				</select>
+				<div id='confusionMatrixGrid' class='slate'></div>
+				<div id='chartHolder'><img src='images/loading.gif' id='loading2'><div id='spectralChart'></div>
+				</div>
+				<div id='siteImage'><img src='images/loading.gif' id='loading'><img id='geeimage'>
+				</div>
+			</div>
+			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'bottom'" id="bottomCP">
+				Header content (bottom)
+			</div>
 		</div>
 	</body>
 </html>
