--- a/index.html
+++ b/index.html
@@ -18,34 +18,32 @@
 				<div id='mapCanvas'>
 					<div id='mapDiv'>
 						<div id='BasemapToggle'></div><div id='slider'></div>
-					</div>
+					</div><img src='images/loading.gif' id='mapLoadingImg'>
 				</div>
 			</div>
 			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right',splitter:true" id="rightCP">
-				<div>
-					Applied masks
+				<div id="controlsContainer">
+					<span> Applied masks </span>
+					<select id="appliedMasks" data-dojo-type="dijit/form/Select">
+						<option value="1" selected="selected">None</option>
+						<option value="2">Slope</option>
+						<option value="3">Slope, NDVI</option>
+						<option value="4">Slope, NDVI, Temperature</option>
+						<option value="5">Slope, NDVI, Temperature, Bare Roc</option>
+					</select>
+					<span> Actual class </span>
+					<select id="actualClass" data-dojo-type="dijit/form/Select">
+						<option value="-1" selected="selected">All</option>
+						<option value="0">Not water</option>
+						<option value="1">No data</option>
+						<option value="2">Cloud</option>
+						<option value="3">Water</option>
+						<option value="5">Ice/Snow</option>
+						<option value="6">Shadow</option>
+						<option value="8">Bare Rock</option>
+						<option value="9">Flooded Vegetation</option>
+					</select>
 				</div>
-				<select id="appliedMasks" data-dojo-type="dijit/form/Select">
-					<option value="1" selected="selected">None</option>
-					<option value="2">Slope</option>
-					<option value="3">Slope, NDVI</option>
-					<option value="4">Slope, NDVI, Temperature</option>
-					<option value="5">Slope, NDVI, Temperature, Bare Roc</option>
-				</select>
-				<div>
-					Actual class
-				</div>
-				<select id="actualClass" data-dojo-type="dijit/form/Select">
-					<option value="-1" selected="selected">All</option>
-					<option value="0">Not water</option>
-					<option value="1">No data</option>
-					<option value="2">Cloud</option>
-					<option value="3">Water</option>
-					<option value="5">Ice/Snow</option>
-					<option value="6">Shadow</option>
-					<option value="8">Bare Rock</option>
-					<option value="9">Flooded Vegetation</option>
-				</select>
 				<div id='confusionMatrixGrid' class='slate'></div>
 				<div id='chartHolder'><img src='images/loading.gif' id='loading2'><div id='spectralChart'></div>
 				</div>
