--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html >
 	<head>
-		<link rel="stylesheet" href="http://js.arcgis.com/3.10/js/dojo/dijit/themes/tundra/tundra.css">
+		<link rel="stylesheet" href="http://js.arcgis.com/3.10/js/dojo/dijit/themes/claro/claro.css">
 		<link rel="stylesheet" href="http://js.arcgis.com/3.10/js/esri/css/esri.css">
 		<link rel="stylesheet" href="styles/slate.css">
 		<link rel="stylesheet" href="styles/geeResults.css">
 		<script src="http://js.arcgis.com/3.10/"></script>
 		<script src="scripts/geeResults.js"></script>
 	</head>
-	<body class="tundra">
+	<body class="claro">
 		<div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design:'headline'" id="borderContainer">
 			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'top'" id="topCP">
 				Google Earth Engine Results Analyser
@@ -23,17 +23,21 @@
 			</div>
 			<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right',splitter:true" id="rightCP">
 				<div class="control">
-					<div class="label">Applied masks </div>
-					<select id="appliedMasks" data-dojo-type="dijit/form/Select">
-						<option value="1" selected="selected">None</option>
-						<option value="2">Slope</option>
-						<option value="3">Slope, NDVI</option>
-						<option value="4">Slope, NDVI, Temperature</option>
-						<option value="5">Slope, NDVI, Temperature, Bare Roc</option>
+					<div class="label">Predicted class </div>
+					<select id="predictedClass" data-dojo-type="dijit/form/Select">
+						<option value="-1">All</option>
+						<option value="0">Not water</option>
+						<option value="1">No data</option>
+						<option value="2">Cloud</option>
+						<option value="3" selected="selected">Water</option>
+						<option value="5">Ice/Snow</option>
+						<option value="6">Shadow</option>
+						<option value="8">Bare Rock</option>
+						<option value="9">Flooded Vegetation</option>
 					</select>
 				</div>
 				<div class="control">
-					<div class="label">Actual class </div>
+					<div class="label">Validated class </div>
 					<select id="actualClass" data-dojo-type="dijit/form/Select">
 						<option value="-1" selected="selected">All</option>
 						<option value="0">Not water</option>
@@ -47,17 +51,13 @@
 					</select>
 				</div>
 				<div class="control">
-					<div class="label">Predicted class </div>
-					<select id="predictedClass" data-dojo-type="dijit/form/Select">
-						<option value="-1" selected="selected">All</option>
-						<option value="0">Not water</option>
-						<option value="1">No data</option>
-						<option value="2">Cloud</option>
-						<option value="3">Water</option>
-						<option value="5">Ice/Snow</option>
-						<option value="6">Shadow</option>
-						<option value="8">Bare Rock</option>
-						<option value="9">Flooded Vegetation</option>
+					<div class="label">Applied masks </div>
+					<select id="appliedMasks" data-dojo-type="dijit/form/Select">
+						<option value="1" selected="selected">None</option>
+						<option value="2">Slope</option>
+						<option value="3">Slope, NDVI</option>
+						<option value="4">Slope, NDVI, Temperature</option>
+						<option value="5">Slope, NDVI, Temperature, Bare Rock</option>
 					</select>
 				</div>
 				<div id='confusionMatrixGrid' class='slate'></div>
