--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 		<link rel="stylesheet" href="styles/geeResults.css">
 		<script src="http://js.arcgis.com/3.10/"></script>
 		<script src="scripts/geeResults.js"></script>
+		<script>
+			(function(i, s, o, g, r, a, m) {
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] ||
+				function() {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+				a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+			ga('create', 'UA-63309294-1', 'auto');
+			ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body class="claro">
 		<div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design:'headline'" id="borderContainer">
